Recompile to Java 8 for compatibility (#71)
* Recompile to Java 8 for compatibility

* Update test_settings.yaml